--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ main {
   margin: 5em auto;
   text-align: center;
   padding-bottom: 2em;
+  border-radius: 8px;
 }
 
 .title {
@@ -38,4 +39,23 @@ main {
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  border-radius: 8px;
+}
+
+/* --------------------- ROLL DICE BUTTON -------------------- */
+
+.roll-dice-btn {
+  height: 50px;
+  width: 100px;
+  border: none;
+  border-radius: 6px;
+  background-color: #5035ff;
+  color: white;
+  font-size: 1.2rem;
+  margin-top: 1em;
+  cursor: pointer;
+}
+
+.roll-dice-btn:active {
+  box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
 }
